--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,20 +1,18 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-/* :root {
+:root {
   --background: #ffffff;
-  --foreground: #171717;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
+  --font-sans: var(--font-geist-mono);
   --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
     --foreground: #ededed;
   }
 }
@@ -22,5 +20,13 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-} */
+  font-family: var(--font-ubuntu-mono), var(--font-konkhmer-sleokchher);
+}
+.my-khmer-text {
+  font-family: var(--font-konkhmer-sleokchher);
+}
+hr{
+  border: 0;
+  border-top: 3px solid var(--color-emerald-950);
+  margin: 20px 0;
+}
